RESOLVED FIXED87910
Really provide error information with the inspector disabled
https://bugs.webkit.org/show_bug.cgi?id=87910
Summary Really provide error information with the inspector disabled
Oliver Hunt
Reported 2012-05-30 16:38:48 PDT
Really provide error information with the inspector disabled
Attachments
Patch (2.04 KB, patch)
2012-05-30 16:39 PDT, Oliver Hunt
fpizlo: review+
Oliver Hunt
Comment 1 2012-05-30 16:39:49 PDT
Oliver Hunt
Comment 2 2012-05-30 16:48:01 PDT
Note You need to log in before you can comment on or make changes to this bug.