Really provide error information with the inspector disabled https://bugs.webkit.org/show_bug.cgi?id=87910

Reviewed by Filip Pizlo.

Don't bother checking for anything other than pre-existing error info.
In the absence of complete line number information you'll only get the
line a function starts on, but at least it's something.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::throwException):

Canonical link: https://commits.webkit.org/105715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118995 268f45cc-cd09-0410-ab3c-d52691b4dbfc